--- a/deploy/eck-fleet-server/templates/tests/fleet-server_test.yaml
+++ b/deploy/eck-fleet-server/templates/tests/fleet-server_test.yaml
@@ -51,5 +51,5 @@ tests:
       - equal:
           path: metadata.annotations
           value:
-            eck.k8s.elastic.co/license: enterprise
+            eck.k8s.elastic.co/license: basic
             test: annotation
