--- a/deploy/eck-kibana/templates/tests/kibana_test.yaml
+++ b/deploy/eck-kibana/templates/tests/kibana_test.yaml
@@ -58,7 +58,7 @@ tests:
       - equal:
           path: metadata.annotations
           value:
-            eck.k8s.elastic.co/license: enterprise
+            eck.k8s.elastic.co/license: basic
             test: annotation
   - it: should render http service properly
     set:
