--- a/deploy/eck-elasticsearch/values.yaml
+++ b/deploy/eck-elasticsearch/values.yaml
@@ -85,6 +85,6 @@ nodeSets:
       - name: elasticsearch
         resources:
           requests:
-            cpu: 1
+            cpu: '1'
           limits:
             memory: 1Gi
