--- a/deploy/eck-kibana/templates/serversTransport.yaml
+++ b/deploy/eck-kibana/templates/serversTransport.yaml
@@ -1,4 +1,5 @@
 {{- $fullName := include "kibana.fullname" . }}
+{{- $labels : = include "kibana.labels" . }}
 {{- with .Values.serversTransport }}
 {{- if .enabled }}
 ---
@@ -7,7 +8,7 @@ kind: ServersTransport
 metadata:
   name: {{ $fullName }}
   labels:
-    {{ include $.kibana.labels . | nindent 4 }}
+    {{ toYaml $labels | nindent 4 }}
 spec:
   {{- toYaml .spec | nindent 2 }}
 {{- end }}
